1.1.dev1
----------------

- fix issue51: return 200 code if release file is successfully uploaded 
  but jenkins could not be triggered (previously returned 500)

- systematically test pypi/mirror code against all 34K pypi projects
  so that we know that all http/https installable archive links that pypi offers 
  are correctly recognized by devpi-server's root/pypi index.

- if no pypi mirror state is known, devpi-server now calls
  pypi to obtain names/serials.  It will fail to start
  if no such initial connection is possible.  Once a first mirror
  state is known, subsequent devpi-server starts will
  not perform this initial query.

- reject simple/NAME if NAME contains non-ascii characters
  (PEP426 naming rules)

- add --export/--import options to dump and import server contents:
  users, indexes, release files and (test) attachments.
  Note that root/pypi (PyPI-caching information) and all
  uploaded documentation will not be exported/imported in this version
  (planned for the future).

- devpi-server now returns a X-DEVPI-API-VERSION header,
  current is "1".  For future incompatible changes this
  version will be incremented so that devpi-client can
  bail out cleanly if it doesn't support the version.

- speed up and make more reliable all operations on private packages which
  have no pypi.python.org release: we can now determine if a project
  exists on pypi and under which name exactly without
  remote queries or redirects to pypi.python.org.

- also add ".serverversion" file and write it if it does not
  exist, and make devpi-server use it to verify if
  operating on a compatible server data layout, otherwise bail out.

- address issue43: --gendeploy now uses pip without --pre and
  explicitely instructs pip to install the exact same version 
  of devpi-server with which --gendeploy is issued.

- fix issue46 -- for GET /root/pypi/ only show a link to the
  simple page instead of computing "latest in-stage packages"